--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,7 +25,7 @@
           <tr>
             <td><a href="<%= urls[url] %>"><%= url %></a></td>
             <td><%= urls[url] %></td>
-            <td><form method="POST" action="/urls/<%= url %>/delete"><input type="submit" value="Delete"></form></td>
+            <td><form method="POST" action="/urls/<%= url %>/delete"><input  class="btn btn-outline-danger" type="submit" value="Delete"></form></td>
           </tr>
         <% } %>
       </tbody>
