--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -14,7 +14,16 @@
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
-    <div class="card-footer text-muted"></div>
+    <div class="card-footer text-muted">
+      <h5 class="card-title">Edit</h5>
+        <p class="card-text"> 
+          <form method="POST" action="/urls">
+            <label for="longURL">New URL:</label>
+            <input type="text" name="longURL" placeholder="<%= longURL %>">
+            <input class="btn btn-primary" type="submit" value="Submit">
+          </form>
+        </p>
+    </div>
   </div>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
