--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,6 +17,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
           <th scope="col">Delete</th>
         </tr>
       </thead>
@@ -25,6 +26,7 @@
           <tr>
             <td><a href="<%= urls[url] %>"><%= url %></a></td>
             <td><%= urls[url] %></td>
+            <td><form method="POST" action="/urls/<%= url %>"><input  class="btn btn-outline-info" type="submit" value="Edit"></form></td>
             <td><form method="POST" action="/urls/<%= url %>/delete"><input  class="btn btn-outline-danger" type="submit" value="Delete"></form></td>
           </tr>
         <% } %>
