--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -26,7 +26,7 @@
           <tr>
             <td><a href="<%= urls[url] %>"><%= url %></a></td>
             <td><%= urls[url] %></td>
-            <td><form method="POST" action="/urls/<%= url %>"><input  class="btn btn-outline-info" type="submit" value="Edit"></form></td>
+            <td><form method="GET" action="/urls/<%= url %>/edit"><input  class="btn btn-outline-info" type="submit" value="Edit"></form></td>
             <td><form method="POST" action="/urls/<%= url %>/delete"><input  class="btn btn-outline-danger" type="submit" value="Delete"></form></td>
           </tr>
         <% } %>
