Added display: flex; for the login form to fit

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,8 +8,8 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <form method="POST" action="/urls">
-          <input type="text" name="username" placeholder="Username">
+        <form style="display: flex;" method="POST" action="/urls">
+          <input class="form-control" type="text" name="username" placeholder="Username">
           <input class="btn btn-outline-dark" type="submit" value="Login">
         </form>
       </div>
