--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,7 +8,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <form style="display: flex;" method="POST" action="/urls">
+        <form style="display: flex;" method="POST" action="/login">
           <input class="form-control" type="text" name="username" placeholder="Username">
           <input class="btn btn-outline-dark" type="submit" value="Login">
         </form>
