Added a margin to the usernam input field

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,7 +12,7 @@
     </div>
     <% if (username === undefined) { %>
       <form class="form-inline text-right" method="POST" action="/login">
-        <input class="form-control" type="text" name="username" placeholder="Username">
+        <input class="form-control mr-2" type="text" name="username" placeholder="Username">
         <input class="btn btn-outline-dark" type="submit" value="Login">
       </form>
    <% } else { %>
