--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -4,22 +4,20 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="justify-content: space-between">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+      <div class="navbar-nav">
+        <% if (user === undefined) { %>
+          <a class="nav-item nav-link" href="/login">Login</a>
+          <a class="nav-item nav-link" href="/register">Register</a>
+        <% } else { %>
+          <a class="nav-item nav-link" href="/logout">Logout</a>
+        <% } %>
+      </div>
     </div>
-    <% if (user === undefined) { %>
-      <form class="form-inline text-right" method="POST" action="/login">
-        <input class="form-control mr-2" type="text" name="username" placeholder="Username">
-        <input class="btn btn-outline-dark" type="submit" value="Login">
-      </form>
-   <% } else { %>
-      <form class="form-inline text-right" method="POST" action="/logout">
-        <label class="nav-item pr-3">Logged In As: <%= user.email %></label>
-        <input class="btn btn-outline-dark nav-item" type="submit" value="Logout">
-      </form>
-   <% } %>
+    
   </nav>
 </header>
