--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -15,7 +15,7 @@
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <h3>Register</h3>
+      <h3>Create Account</h3>
       <form method="POST" action="/register">
         <div class="form-group">
           <label for="email">Email address</label>
