--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -6,8 +6,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="justify-content: space-between">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+          <a class="nav-item nav-link" href="/urls">My URLs</a>
+        <% if (user === undefined) { %>
+          <a class="nav-item nav-link" href="/login">Create New URL</a>
+        <% } else { %>
+          <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <% } %>
       </div>
       <div class="navbar-nav">
         <% if (user === undefined) { %>
