--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,29 +10,37 @@
 </head>
 <body>
   <%- include('partials/_header')%>
-  <main style="margin: 1em;">
-    <h3>My URLs</h3>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Short URL</th>
-          <th scope="col">Long URL</th>
-          <th scope="col">Edit</th>
-          <th scope="col">Delete</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% for(let url in urls) { %>
+  <% if (user === undefined) { %>
+    <main style="margin: 1em;">
+      <h3>Welcome to TinyApp</h3>
+      <p>Newcomer? Please Register. Already have an account? Please login.
+      </p>
+    </main>
+  <% } else { %>
+    <main style="margin: 1em;">
+      <h3>My URLs</h3>
+      <table class="table">
+        <thead>
           <tr>
-            <td><a href="<%= urls[url] %>"><%= url %></a></td>
-            <td><%= urls[url] %></td>
-            <td><form method="GET" action="/urls/<%= url %>/edit"><input  class="btn btn-outline-info" type="submit" value="Edit"></form></td>
-            <td><form method="POST" action="/urls/<%= url %>/delete"><input  class="btn btn-outline-danger" type="submit" value="Delete"></form></td>
+            <th scope="col">Short URL</th>
+            <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
           </tr>
-        <% } %>
-      </tbody>
-    </table>
-  </main>
+        </thead>
+        <tbody>
+          <% for(let url in urls) { %>
+            <tr>
+              <td><a href="<%= urls[url] %>"><%= url %></a></td>
+              <td><%= urls[url] %></td>
+              <td><form method="GET" action="/urls/<%= url %>/edit"><input  class="btn btn-outline-info" type="submit" value="Edit"></form></td>
+              <td><form method="POST" action="/urls/<%= url %>/delete"><input  class="btn btn-outline-danger" type="submit" value="Delete"></form></td>
+            </tr>
+          <% } %>
+        </tbody>
+      </table>
+    </main>
+  <% } %>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
