--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -12,9 +12,7 @@
   <%- include('partials/_header')%>
   <% if (user === undefined) { %>
     <main style="margin: 1em;">
-      <h3>Welcome to TinyApp</h3>
-      <p>Newcomer? Please Register. Already have an account? Please login.
-      </p>
+      <h1>Please Login First</h1>
     </main>
   <% } else { %>
     <main style="margin: 1em;">
@@ -33,7 +31,7 @@
             <tr>
               <td><a href="<%= urls[url] %>"><%= url %></a></td>
               <td><%= urls[url] %></td>
-              <td><form method="GET" action="/urls/<%= url %>/edit"><input  class="btn btn-outline-info" type="submit" value="Edit"></form></td>
+              <td><form method="GET" action="/urls/<%= url %>"><input  class="btn btn-outline-info" type="submit" value="Edit"></form></td>
               <td><form method="POST" action="/urls/<%= url %>/delete"><input  class="btn btn-outline-danger" type="submit" value="Delete"></form></td>
             </tr>
           <% } %>
